<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".datos_persona">

    <TextView
        android:id="@+id/datospersona"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/datospersona"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.058" />

    <Button
        android:id="@+id/btngrabarpersona"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="mostrarDatosPersonaObjeto"
        android:text="@string/btngrabarpersona"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txttelefono"
        app:layout_constraintVertical_bias="0.066" />

    <EditText
        android:id="@+id/txtnombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/txtnombre"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/datospersona"
        app:layout_constraintStart_toStartOf="@+id/datospersona"
        app:layout_constraintTop_toBottomOf="@+id/datospersona"
        app:layout_constraintVertical_bias="0.086" />

    <EditText
        android:id="@+id/txtapellido"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/txtapellido"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/txtnombre"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/txtnombre"
        app:layout_constraintTop_toBottomOf="@+id/txtnombre"
        app:layout_constraintVertical_bias="0.039" />

    <EditText
        android:id="@+id/txttelefono"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/txttelefono"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/txtapellido"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/txtapellido"
        app:layout_constraintTop_toBottomOf="@+id/txtapellido"
        app:layout_constraintVertical_bias="0.052" />

    <TextView
        android:id="@+id/tvmostrarpersona"
        android:layout_width="278dp"
        android:layout_height="109dp"
        android:text="@string/tvmostrarpersona"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/btngrabarpersona"
        app:layout_constraintStart_toStartOf="@+id/btngrabarpersona"
        app:layout_constraintTop_toBottomOf="@+id/btngrabarpersona"
        app:layout_constraintVertical_bias="0.161" />
</androidx.constraintlayout.widget.ConstraintLayout>